Add copy for chatbot page

--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -57,6 +57,9 @@
           <div class="container">
           <h1 class="mt-5">Career Chatbot</h1> 
           <h2>Ask Me Anything!</h2>
+          <p>Get Expert Career Advice for Women in Tech with Our Chatbot!
+
+            Are you searching for guidance on how to break into the tech industry? Our website features a chatbot designed to provide personalized career advice for women. From identifying the right skills to learn to navigating the job market, our chatbot offers tailored recommendations and support. With its extensive knowledge and resources, you'll have the confidence and insight you need to succeed in tech. Start chatting now and take control of your tech career journey!</p>
           <p class="lead">Type your question into the black terminal below to ask the Career Chatbot anything about a career in tech! 
               Try some of the prompts below! </p>
               <p>(Don't forget to wait for 5 seconds to receive your answer :)</p>
