--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -56,21 +56,30 @@
         <main class="flex-shrink-0">
           <div class="container">
           <h1 class="mt-5">Career Chatbot</h1> 
-          <h2>Ask Me Anything!</h2>
-          <p>Get Expert Career Advice for Women in Tech with Our Chatbot!
-
-            Are you searching for guidance on how to break into the tech industry? Our website features a chatbot designed to provide personalized career advice for women. From identifying the right skills to learn to navigating the job market, our chatbot offers tailored recommendations and support. With its extensive knowledge and resources, you'll have the confidence and insight you need to succeed in tech. Start chatting now and take control of your tech career journey!</p>
-          <p class="lead">Type your question into the black terminal below to ask the Career Chatbot anything about a career in tech! 
-              Try some of the prompts below! </p>
-              <p>(Don't forget to wait for 5 seconds to receive your answer :)</p>
-          <p>Example prompts: "How can I get a job in...?" "What is a day in the life of a Data Analyst like?" "What's the average salary for a Software Engineer in the UK?"</p>
-        </main>  
-    <div id="terminal"></div>
+          <p class="lead">Get Expert Career Advice for Women in Tech with Our Chatbot!</p>
+          <!-- <p> Are you searching for guidance on how to break into the tech industry? Our chatbot is designed to provide personalized career advice for women. From identifying the right skills to learn to navigating the job market, our chatbot offers tailored recommendations and support. With its extensive knowledge and resources, you'll have the confidence and insight you need to succeed in tech. Start chatting now and take control of your tech career journey!</p>
+          <p>Example questions: "How can I get a job in...?" "What is a day in the life of a Data Analyst like?" "What's the average salary for a Software Engineer in the UK?"</p>
+            <img src="img/chatbot.png" class='img-fluid' alt="chatbot image"> -->
+            <div class="container ">
+              <div class="row align-items-start">
+                <div class="col">
+                  <img src="img/chatbot.png" class='icon_img img-fluid' alt="chatbot image">
+            
+                </div>
+                <div class="col">
+                  <p> Are you searching for guidance on how to break into the tech industry? Our chatbot is designed to provide personalized career advice for women. From identifying the right skills to learn to navigating the job market, our chatbot offers tailored recommendations and support. With its extensive knowledge and resources, you'll have the confidence and insight you need to succeed in tech. Start chatting now and take control of your tech career journey!</p>
+                  </div>
+              </div>
+              <p>Example questions: "How can I get a job in...?" "What is a day in the life of a Data Analyst like?" "What's the average salary for a Software Engineer in the UK?"</p>
+              <div id="terminal"></div>
+              <br>
+          </main>  
+    
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <footer class="footer mt-auto py-3 bg-light">
+    <footer class="footer mt-auto py-3">
       <div class="container">
-      <span class="text-muted">Created by Team Lime.</span>
+      <span class="text-muted">Created by Team Lime © 2023.</span>
       </div>
     </footer>
   </body>
