--- a/public/emailSpark.html
+++ b/public/emailSpark.html
@@ -106,7 +106,7 @@ button.addEventListener('click', async function(event) {
     //     method: 'POST',
     //     headers: {
     //     'Content-Type': 'application/json',
-    //     'Authorization': `Bearer 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`,
+    //     'Authorization': `Bearer `,
     //     },
     //     body: JSON.stringify({
     //     prompt: text,
